tests/codegen/compile/runtime/fail/missing_args.rs
use rust_liveview::runtime;

#[runtime]
async fn main() {}
